fix: re-add blue background in user image placeholder, gap in user list

--- a/packages/xm_dkfz_net_site/Resources/Private/Scss/components/userlist.scss
+++ b/packages/xm_dkfz_net_site/Resources/Private/Scss/components/userlist.scss
@@ -68,7 +68,7 @@
 
     .users__item {
         display: grid;
-        gap: 5px;
+        gap: 1rem;
         padding: 2px 0;
 
         @include media-breakpoint-up(md) {
